--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>bro what</title>
 <script>
   window.onload = function() {
-    const titles = ["what the skid", "bro quantum is soo bad", "sponge > zyte"];
+    const titles = ["what the skid", "bro quantum is soo bad", "sponge > zyte", "adam is a skid blud what the skid ha"];
     let currentIndex = 0;
 
     setInterval(() => {
@@ -531,8 +531,8 @@
     <a class="button " onclick="blank('https://a6936-19375562.cluster7.canvas-user-content.com/courses/6936~1010708/files/6936~19375562/course%20files/vfcd/index.html?context_id=6936~1010708context_type=Course&download=1&id=69360000019375562&inline=1');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/subway-surfers-ny/NewYorkIcon.png" alt="subway">
     </a>
-    <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-bkg%2Cfklgdktahqtwfd.oe-b12-YinNKDfuakRgIjQVg%60f%2Cmr4');">
-      <img src="https://th.bing.com/th/id/OIP.uN2kUJQ7lL0adPDQGxlf-QAAAA?w=420&h=420&rs=1&pid=ImgDetMain" alt="fnaf movie">
+    <a class="button" onclick="blank('https://jmw-ub.pages.dev/static/jmwsw/hvtrs8%2F-hkalioe%2Ctm%2F');">
+      <img src="https://i.imgur.com/OpCI4kP.png" alt="fnaf movie">
     </a>
     <a class="sigma" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/bad-ice-cream/index.html');">
       <img src="https://i.imgur.com/rp68OdI.png">
@@ -552,6 +552,9 @@
  <a class="button" onclick="blank('https://shadowgmes.github.io/gfiles/ballistic-chickens/');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/ballistic-chickens/logo.png" alt="chicken">
     </a>
+ <a class="button" onclick="blank('https://vinmannie.github.io/Sonic-1-WASM/');">
+      <img src="https://i.imgur.com/AdGqTYv.png" alt="sonic">
+    </a>
  <a class="button" onclick="blank('https://xn--7zc.vercel.app/english/src/tag/');">
       <img src="https://i.imgur.com/BHlfDJ6.png" alt="chicken">
     </a>
@@ -568,8 +571,8 @@
 
   <!-- Second Row of Buttons -->
   <div class="button-container">
-    <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-bkg%2Cfklgdktahqtwfd.oe-b13-XIhRsuoERFmZSldWgAf%2Cmr4');">
-      <img src="https://i.imgur.com/686iy7V.jpg" alt="sponge">
+    <a class="button" onclick="blank('https://moviemate-rebrand.vercel.app/');">
+      <img src="https://i.imgur.com/oIeP6UI.png" alt="movie">
     </a>
     <a class="button" onclick="blank('https://projects.sappharad.com/s3air_ios/20240202_beta/sonic3air_web.html');">
       <img src="https://i.imgur.com/HyAw7fn.png" alt="mania">
@@ -597,6 +600,9 @@
     </a>
     <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/cookie-clicker/');">
       <img src="https://th.bing.com/th/id/R.98626247c0801762e4eb11dc481b23b4?rik=GUiQy2FMBKcPHA&pid=ImgRaw&r=0" alt="cookie clicker">
+    </a>
+    <a class="button" onclick="blank('https://x8bitrain.github.io/webXash/');">
+      <img src="https://i.imgur.com/Jfgk4FR.jpeg" alt="hl">
     </a>
     <a class="button" onclick="blank('https://burgerbounty.github.io/s4/getaway-shootout/');">
       <img src="https://th.bing.com/th/id/OIP.PPom7Z99XBMeyX9oBa_LRQAAAA?rs=1&pid=ImgDetMain" alt="getaway">
