--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>bro what</title>
 <script>
   window.onload = function() {
-    const titles = ["what the skid", "bro quantum is soo bad", "sponge > zyte", "adam is a skid blud what the skid ha"];
+    const titles = ["what the skid", "bro quantum is soo bad", "sponge > zyte", "adam the skid after not skidding for a day 😿"];
     let currentIndex = 0;
 
     setInterval(() => {
@@ -571,8 +571,8 @@
 
   <!-- Second Row of Buttons -->
   <div class="button-container">
-    <a class="button" onclick="blank('https://moviemate-rebrand.vercel.app/');">
-      <img src="https://i.imgur.com/oIeP6UI.png" alt="movie">
+    <a class="button" onclick="blank('https://movie-web-kickstart.vercel.app/home');">
+      <img src="https://i.imgur.com/kJ1Zx5i.png" alt="movie">
     </a>
     <a class="button" onclick="blank('https://projects.sappharad.com/s3air_ios/20240202_beta/sonic3air_web.html');">
       <img src="https://i.imgur.com/HyAw7fn.png" alt="mania">
@@ -611,7 +611,7 @@
       <img src="https://somuchmath.global.ssl.fastly.net/projects/basketbros-io/thumb.jpg" alt="basketbro">
     </a>
     <a class="button" onclick="blank('https://db.scmtstore.com/semag/gdlite/index.html');">
-      <img src="https://i.imgur.com/4qngYqD.png" alt="gd">
+      <img src="https://i.imgur.com/61pbiVU.png" alt="gd">
     </a>
     <a class="button" onclick="blank('https://www.netquake.io/');">
       <img src="https://i.imgur.com/d6Ut7U0.gif" alt="quake">
