--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
   <!-- Second Row of Buttons -->
   <div class="button-container">
     <a class="button" onclick="blank('https://jmw-ub.pages.dev/static/jmwsw/hvtrs8%2F-fmsqa%2Ctt%2F');">
-      <img src="hhttps://i.imgur.com/kJ1Zx5i.png" alt="movie">
+      <img src="https://i.imgur.com/kJ1Zx5i.png" alt="movie">
     </a>
     <a class="button" onclick="blank('https://projects.sappharad.com/s3air_ios/20240202_beta/sonic3air_web.html');">
       <img src="https://i.imgur.com/HyAw7fn.png" alt="mania">
