--- a/index.html
+++ b/index.html
@@ -3,20 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>bro what</title>
-<script>
-  window.onload = function() {
-    const titles = ["what the skid", "bro quantum is soo bad", "sponge > zyte", "adam the skid after not skidding for a day 😿"];
-    let currentIndex = 0;
+<title>adam the skid</title>
 
-    setInterval(() => {
-      document.title = titles[currentIndex];
-      currentIndex = (currentIndex + 1) % titles.length;
-    }, 1000);
-  };
-</script>
-</head>
-<body>
 
 
 <!DOCTYPE html>
