--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>adam the skid</title>
+<title>🤡</title>
 
 
 
@@ -439,7 +439,7 @@
 
     .button img {
       display: block;
-      width: 31.25px;
+      width: 25.25px;
       height: auto;
     }
 
@@ -463,7 +463,7 @@
 
     .sigma img {
       display: block;
-      width: 35.1px;
+      width: 29.1px;
       height: auto;
     }
 
@@ -478,14 +478,18 @@
 }
 
 
+.header {
+    font-family: 'Roboto', sans-serif;
+}
+
   </style>
 </head>
 <body>
-  <div class="header" style="padding-top: 30px;">Quantum</div>
+  <div class="header" style="padding-top: 30px;">🅀🅄𝕬ꪀ꓄𝕌🅼</div>
   
   <form name="cse" id="searchbox_demo" onsubmit="return submitUrl()">
     <input type="text" id="urlInput" placeholder="" style="border-radius: 25px; padding: 10px;" />
-    <input type="submit" value="Go" style="border-radius: 25px; padding: 10px 20px; background-color: #007bff; color: white; border: none; cursor: pointer;" />
+    <input type="submit" value="Ⓖ𝖔" style="border-radius: 25px; padding: 10px 20px; background-color: #007bff; color: white; border: none; cursor: pointer;" />
   </form>
 
   <div class="vault-container">
