--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 
 
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -287,16 +289,16 @@
 </head>
 <body>
 <div class="snowflakes">
-  <div class="snowflake">❅</div>
-  <div class="snowflake">❅</div>
-  <div class="snowflake">❆</div>
-  <div class="snowflake">❄</div>
-  <div class="snowflake">❅</div>
-  <div class="snowflake">❆</div>
-  <div class="snowflake">❄</div>
-  <div class="snowflake">❅</div>
-  <div class="snowflake">❆</div>
-  <div class="snowflake">❄</div>
+<div class="snowflake">☃️</div>
+<div class="snowflake">☃️</div>
+<div class="snowflake">❄️</div>
+<div class="snowflake">⛄</div>
+<div class="snowflake">☃️</div>
+<div class="snowflake">❄️</div>
+<div class="snowflake">⛄</div>
+<div class="snowflake">☃️</div>
+<div class="snowflake">❄️</div>
+<div class="snowflake">⛄</div>
 </div>
 </body>
 </html>
@@ -485,7 +487,7 @@
   </style>
 </head>
 <body>
-  <div class="header" style="padding-top: 30px;">🅀🅄𝕬ꪀ꓄𝕌🅼</div>
+  <div class="header" style="padding-top: 30px;">🅀𝖀𝕬𝕹𝕿𝖀𝕸</div>
   
   <form name="cse" id="searchbox_demo" onsubmit="return submitUrl()">
     <input type="text" id="urlInput" placeholder="" style="border-radius: 25px; padding: 10px;" />
@@ -523,7 +525,7 @@
     <a class="button " onclick="blank('https://a6936-19375562.cluster7.canvas-user-content.com/courses/6936~1010708/files/6936~19375562/course%20files/vfcd/index.html?context_id=6936~1010708context_type=Course&download=1&id=69360000019375562&inline=1');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/subway-surfers-ny/NewYorkIcon.png" alt="subway">
     </a>
-    <a class="button" onclick="blank('https://jmw-ub.pages.dev/static/jmwsw/hvtrs8%2F-hkalioe%2Ctm%2F');">
+    <a class="button" onclick="blank('https://hianime.to/');">
       <img src="https://i.imgur.com/OpCI4kP.png" alt="fnaf movie">
     </a>
     <a class="sigma" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/bad-ice-cream/index.html');">
@@ -572,7 +574,7 @@
     <a class="button" onclick="blank('https://db.scmtstore.com/semag/basketrandom/index.html');">
       <img src="https://th.bing.com/th/id/R.3cc7b68d78f953133c4eae9a97b874dd?rik=Qu5mbezd5qr32Q&pid=ImgRaw&r=0" alt="basket">
     </a>
-    <a class="button" onclick="blank('https://jmw-ub.pages.dev/static/jmwsw/hvtrs8%2F-sklgnvsraaeoapile%2Ccmm-');">
+    <a class="button" onclick="blank('https://silentspacemarine.com/');">
       <img src="https://i.imgur.com/u8Xyvmo.png" alt="doom">
     </a>
     <a class="button" onclick="blank('https://classroomjq.github.io/gladihoppers/');">
