--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 
 
 
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -635,12 +633,9 @@
   <script>
     // Array of random placeholder texts
     var placeholders = [
-      "Adam is a ⓢⓚⓘⓓ",
-      "What the 卐",
-      "I Love 🧽",
-      "Hi 🅱ryce",
-      "Me When Im: ☺",
-      "Dinner With Jay-Z Or $500,000?"
+      "𝔞𝔡𝔞𝔪 𝔦𝔰 𝔞 ⓢⓚⓘⓓ",
+      "ｓｐｏｎｇｅｓ ａｒｅ ｃｏｏｌ 🧽",
+      "ₕᵢ 🅱ᵣycₑ",
     ];
 
     // Function to set random placeholder text
