--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
   </style>
 </head>
 <body>
-  <div class="header" style="padding-top: 30px;">🅀𝖀𝕬𝕹𝕿𝖀𝕸</div>
+  <div class="header" style="padding-top: 30px;">🅀𝔘𝔄𝔑𝔗𝔘𝔐</div>
   
   <form name="cse" id="searchbox_demo" onsubmit="return submitUrl()">
     <input type="text" id="urlInput" placeholder="" style="border-radius: 25px; padding: 10px;" />
@@ -505,7 +505,7 @@
     <a class="button" onclick="blank('https://xn--l8jyc6av9xzc.jodymaroni.com/compiled/fnaf2/');">
       <img src="https://i.imgur.com/dmcIh5N.jpg" alt="fnaf2">
     </a>
-    <a class="button" onclick="blank('https://db.scmtstore.com/semag/pizzatower/index.html');">
+    <a class="button" onclick="blank('https://play.gx.games/game-wrapper/8a1b3c75-0273-4f80-8069-f4014102524d/index.html?game=5086c453-b86d-4ab2-ba09-22259722f057&track=35d56f7f-2a8b-4661-b69f-c868cb855467&release=05c9eeb7-c541-43e1-a45d-e8815195c432&gamePlayId=8386b5ef-980e-41ae-8365-8b6069764b7e');">
       <img src="https://db.scmtstore.com/semag/pizzatower/images/menubg.png" alt="pizzatower">
     </a>
     <a class="button" onclick="blank('https://newbody.vercel.app/Mario_64-OFFLINE.html');">
@@ -556,7 +556,7 @@
 <a class="button" onclick="blank('https://levelsharesquare.com/html5/supermarioconstruct/');">
       <img src="https://i.imgur.com/5Fz5C1u.png" alt="smc">
     </a>
-<a class="button" onclick="blank('https://html-classic.itch.zone/html/2876359-985120/index.html');">
+<a class="button" onclick="blank('https://html-classic.itch.zone/html/2876359-1000879/index.html');">
       <img src="https://th.bing.com/th/id/R.7936acf97d736dbfd5613c09a3f6acfa?rik=KxpihNWAM93B5w&pid=ImgRaw&r=0" alt="fnf">
     </a>
   </div>
